--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 			<!-- Your javascript should be called here -->
-			<script src="main.js"></script>
+			<script src="https://github.com/amhammo/annotatedImage/blob/master/main.js"></script>
 		</div>
 	</body>
 
