update annex button text

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 									<div class="inner">
 										<a href="#" class="close"></a>
 										<div class="content">
-											<p>The Reform Temple of Forest Hills is just one block from P.S. 196.
+											<p>The Reform Temple of Forest Hills, just one block from P.S. 196, serves as an annex for the overcrowded elementary school.
 											</p>
 										</div>
 									</div>
